--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,7 +93,16 @@
   "markdown.extension.tableFormatter.enabled": false,
   "markdown.extension.toc.updateOnSave": false,
   "markdown.validate.unusedLinkDefinitions.enabled": "warning",
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    "./test",
+    "-p",
+    "test_*.py"
+  ],
+  "python.testing.unittestEnabled": true,
   "redhat.telemetry.enabled": false,
   "ruff.importStrategy": "fromEnvironment",
-  "ruff.lint.enable": true,
+  "ruff.lint.enable": true
 }
